<resources>
    <string name="label_rookie">New employee</string>
    <string name="edit_rookie">Edit employee</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="corporate_email">Corporate email</string>
    <string name="phone_number">Phone number</string>
    <string name="skype">Skype</string>
    <string name="specialization">Specialization</string>
    <string name="city">City</string>
    <string name="remote">Remote</string>
    <string name="ex">Ex</string>
    <string name="submit">Submit</string>
    <string name="employee_was_successfully_added">Employee was successfully added</string>
    <string name="employee_was_successfully_updated">Employee was successfully updated</string>

    <string name="required_field">Required field</string>
    <string name="please_wait_a_little">Please wait a little</string>

    <string name="icon_menu_delete">Delete</string>
    <string name="are_you_sure_want_to_delete_this_account">Are you sure want to delete this account?</string>

    <string name="remove_photo">Remove photo</string>
    <string name="select_photo">Select photo</string>
</resources>